--- a/cairo_ml.opam
+++ b/cairo_ml.opam
@@ -2,17 +2,17 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name <maintainer@example.com>"]
-authors: ["Author Name <author@example.com>"]
-license: "LICENSE"
-tags: ["add topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
-doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+maintainer: ["Flydexo <flydexo@gmail.com>"]
+authors: ["Flydexo <flydexo@gmail.com>"]
+license: "MIT"
+tags: ["crypto" "zk" "stark"]
+homepage: "https://github.com/flydexo/stark"
+bug-reports: "https://github.com/flydexo/stark/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml"
   "zarith"
+  "sha" {= "1.14"}
   "odoc" {with-doc}
 ]
 build: [
@@ -29,4 +29,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/flydexo/stark.git"
