--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name cairo_ml)
- (modules polynomial field)
- (libraries zarith))
+ (modules polynomial field merkle)
+ (libraries zarith sha))
